--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <title>Bubble Sort Demo</title>
     </head>
     <body id="app" class="bg-[#002744] flex flex-col h-screen">
         <div class="flex justify-center p-6 text-white font-mono text-4xl">Bubble Sort Algorithm</div>
